# lab-03-array

./: CMakeLists.txt  README.md
sources/: meson.build  string_tasks.cpp  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
tests/: meson.build  test.cpp
